tests/reference/pass_global_stmts-global_scope5-fb3716b.stderr
syntax error: Statement or Declaration expected inside program, found Expression
 --> tests/global_scope5.f90:3:1
  |
3 | 2*x
  | ^^^ 
